Web/wwwroot/css/site.css
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400&family=Poppins:wght@200;400;700&display=swap');

:root {
    --default-font: 'Poppins', sans-serif;
    --default-mono-font: 'IBM Plex Mono', monospace;
    
    --primary-background: black;
    --primary-color: white;
    --primary-font-size: 17px;
    
    --secondary-background: white;
    --secondary-color: black;
    
    --dirty-red: #ddd7d5;
    --darker-dirty-red: #C7C2C0;
    
    --light-black: #1E1E1E;
    --darker-black: #0D0D0D;
    
    --accent-color: #1A1A1A;
    
    --danger: #E53935;
    --darker-danger: #D32F2F;
    
    --default-article-padding: 7px 0px;
}

html, body {
    background: linear-gradient(0deg, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), 
    url("https://cdn.discordapp.com/attachments/1088291004341301328/1110035740529795082/chomnr_black_background_texture_subtle_flaws_in_the_tiles_da604a1d-304b-42b1-b404-fb7648a3bf4c.png") ;
    font-family: var(--default-font);
    font-size: var(--primary-font-size);
    padding: 0;
    margin: 0;
}

 #default-content p {
     font-size: 16px;
     padding:  0;
     margin:  0;
     word-break: break-all;
 }

/* FONT SIZES */
.text-default {
    font-size: inherit;
}
/* ENDS HERE */

h1, h2, h3, h4 {
    padding: 10px 0;
    margin: 0;
}

code {
    background: var(--dirty-red);
    color: var(--light-black);
}

@media only screen and (min-width: 768px) {
    h1 { font-size: 3rem; }
    h2 { font-size: 2.4rem; }
    h3 { font-size: 1.6rem; }
    h4 { font-size: 1.0rem; }
}

@media only screen and (max-width: 767px) {
    h1 { font-size: 1.8rem; }
    h2 { font-size: 1.8rem; }
    h3 { font-size: 1.5rem; }
    h4 { font-size: 1.2rem; }
}

@media only screen and (max-width: 767px) and (orientation: portrait) {
    h1 { font-size: 2.8rem; }
    h2 { font-size: 2.4rem; }
    h3 { font-size: 1.6rem; }
    h4 { font-size: 1.0rem; }
}

form {
    /* Your existing styles for the form */
}

form h1,
form h2,
form h3,
form h4,
form p,
form a{
    padding: 0;
    text-decoration: none;
    color: inherit;
}

form .group {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    position: relative;
    width: 100%;
}

form .group.row {
    display: flex;
    justify-content: flex-start;
    flex-direction: row;
}

form .group label {
    font-weight: normal;
    font-size: 0.8rem;
}

input {
    border: 0;
    outline: none;
    box-sizing: border-box;
    font-family: inherit;
    background: var(--dirty-red);
    color: var(--light-black);
    padding: 3px 6px;
    width: 100%;
}

button {
    outline: none;
    border: 0;
    font-family: inherit;
    background: var(--dirty-red);
    color: var(--light-black);
    padding: 3px 6px;
    width: inherit; /* Set width to inherit from parent */
}

button.dark {
    background: var(--light-black);
    color: var(--dirty-red);
}

button.dark:hover {
    background: var(--dirty-red);
    color: var(--light-black);
}

button.danger {
    background: var(--danger);
    color: var(--dirty-red);
}

button.danger:hover {
    background: var(--darker-dirty-red);
    color: var(--light-black);
}

button:hover {
    background: var(--secondary-background);
    color: var(--secondary-color);
    cursor: pointer;
}

input[type="checkbox"]
{
    float: left;
    margin: 0;
    padding: 0;
}

input[type="checkbox"]:after
{
    clear: both;
    display: block;
}

/* NAVIGATION */
.blg-head {
    display: flex;
    justify-content: center;
    border-bottom: 1px solid var(--accent-color);
    padding: 0.5rem 0.5rem 0.5rem 0.5rem;
    background: none;
    background: var(--primary-background);
}

nav.default-nav {
    display: flex;
    align-items: center;
    width: 1600px;
    color: var(--primary-color);
}

nav.default-nav .brand {
    font-size: 2rem;
    font-weight: bold;
}

nav.default-nav .brand a {
    color: inherit;
    text-decoration: none;
}

nav.default-nav ul {
    display: flex;
    list-style: none;
    padding: 0 11px;
    gap: 13px;
    color: var(--primary-color);
    font-family: var(--default-mono-font);
    font-size: 0.69rem;
    border-radius: 3px;
    margin-left: auto;
}

nav.default-nav li {
    background: var(--secondary-background);
    color: var(--secondary-color);
    border-radius: 3px;
    padding: 3px 9px;
}

nav.default-nav li a { 
    color: inherit; 
    text-decoration: none;
}

nav.default-nav li a:hover { opacity: 0.6; }

/* SECTION */
.blg-section {
    display: flex;
    justify-content: center;
}

.blg-section .blg-child-node {
    display: flex;
    width: 1600px;
    border-radius: 3px;
    color: var(--dirty-red);
}

.blg-section .blg-child-node.col { flex-direction: column; }

.blg-section .blg-child-node .section-title { font-weight: bold; width: 100%; }
.blg-section .blg-child-node .section-title.with-divider { border-bottom: 1px solid var(--accent-color); }

/* INPUT TITLE */
.blg-section .blg-child-node input.section-title {
    background: transparent;
    font-weight: bold;
    font-size: 2.8rem;
    color: var(--dirty-red);
}

.blg-section .blg-child-node input.section-tags {
    background: transparent;
    font-weight: bold;
    font-size: 1.5rem;
    color: var(--dirty-red);
}

/* ENDS HERE */

@media only screen and (max-width: 767px) {
    .blg-section .blg-child-node .section-title { font-size: 2.3rem; }
}
 
/* Article sub-post (Front Page) */
.blg-section .blg-child-node > article.sub-post:first-of-type {
    margin-top: 7px;
}

article.sub-post {
    display: flex;
    width: 100%;
    gap: 7px;
    padding: var(--default-article-padding);
    align-items: center;
}

article.sub-post > div {
    padding-left: 10px;
}

article.sub-post:nth-child(even) {
    background: var(--light-black);
}

article.sub-post:hover {
    cursor: pointer;
    background: #101010;
}

 article.sub-post .post-author {
    background: var(--dirty-red);
    color: var(--light-black);
    border-radius: 3px;
    padding: 0 7px;
    font-size: 0.7rem;
}

 article.sub-post .post-author:hover {
    opacity: 0.7;
}

 article.sub-post .post-date {
    background: var(--dirty-red);
    color: var(--light-black);
    border-radius: 3px;
    padding: 0 7px;
    font-size: 0.7rem;
}

article.sub-post .post-date:hover {
    cursor: default;
}
 
 article.sub-post .post-title {
    padding: 0 7px;
}

 article.sub-post .post-title {
    font-size: 0.95rem;
}

 article.sub-post ul.post-tags {
    display: flex;
    list-style: none;
    padding: 0 7px;
    margin: 0;
    gap: 7px;
}
 article.sub-post ul.post-tags li {
    background: var(--primary-color);
    color: var(--light-black);
    border-radius: 3px;
    font-size: 0.7rem;
    padding: 0 7px;
}

 article.sub-post ul.post-tags li:hover {
    opacity: 0.7;
}

 article.sub-post .post-manager {
     display: flex;
     margin-left: auto;
     padding-right: 7px;
     gap: 9px;
 }

article.sub-post .post-manager a {
    color: inherit;
}
 
article.sub-post .post-manager .action {
    color: inherit;
}

@media only screen and (max-width: 767px) {
     article.sub-post {
        align-items: flex-start;
        flex-direction: column;
        margin-top: 15px;
        border-left: 2px solid var(--accent-color);
    }

     article.sub-post .post-date {
        background: transparent;
        color: var(--primary-color);
    }

     article.sub-post .post-author {
        background: transparent;
        color: var(--primary-color);
        margin-left: 0;
    }
}

/* Article view-post (Front Page) */
article.view-post {
    display: flex;
    width: 100%;
    gap: 7px;
    padding: var(--default-article-padding);
    flex-direction: column;
    justify-content: flex-start;
}

article.view-post .author-bar {
    display: flex;
    background: var(--light-black);
    color: var(--dirty-red);
    padding: 10px;
    border-radius: 10px;
    gap: 5px;
    align-items: center;
}

article.view-post .author-bar .avatar {
    display: flex;
    border-radius: 30px;
}

article.view-post .author-bar .mini-col {
    display: flex;
    border-radius: 30px;
    flex-direction: column;
}

article.view-post .author-bar .name {
    display: flex;
    border-radius: 30px;
    flex-direction: column;
    font-size: 0.8rem;
}

article.view-post .author-bar .name:hover {
    opacity: 0.7;
    cursor: pointer;
}

article.view-post .author-bar .published {
    display: flex;
    border-radius: 30px;
    flex-direction: column;
    font-size: 0.6rem;
}

article.view-post ul.view-tags {
    display: flex;
    list-style: none;
    padding: 0 7px;
    margin: 0;
    gap: 7px;
}

article.view-post ul.view-tags li {
    background: var(--primary-color);
    color: var(--light-black);
    border-radius: 3px;
    font-size: 0.7rem;
    padding: 0 7px;
}

article.view-post ul.view-tags li.read-time {
    display: none;
}

article.view-post ul.view-tags li:hover {
    opacity: 0.7;
}

@media only screen and (max-width: 767px) {
    article.view-post ul.view-tags li {
        display: none;
    }

    article.view-post ul.view-tags li.read-time {
        display: block;
    }

    article.view-post ul.view-tags li.read-time:hover {
        opacity: 1;
        cursor: default;
    }
}
/* Pagination */
.pagination {
    display: flex;
    margin-top: 15px;
    margin-bottom: 10px;
    border-radius: 3px;
    gap: 13px;
    font-size: 0.6rem;
    font-weight: bold;
    width: fit-content;
}
.pagination a {
    text-decoration: none;
    text-align: center;
    color: var(--dirty-red);
    padding: 5px 10px;
    width: fit-content;
    min-width: 15px;
    height: 15px;
    border-radius: 3px;
    background: var(--darker-black);
}

.pagination a:hover {
    background: var(--dirty-red);
    color: var(--darker-black);
    cursor: pointer;
}

.pagination a.active {
    background: var(--dirty-red);
    color: var(--darker-black);
    cursor: pointer;
}


/* MODIFIERS */
.no-border {
    border: 0;
}

/* SELECTABLE TAGS */
ul.selectable-tags {
    display: flex;
    padding: 0;
    margin: 0;
    list-style: none;
    gap: 3px;
}

ul.selectable-tags li {
    margin: 0;
    text-decoration: none;
    list-style: none;
    background: var(--dirty-red);
    color: var(--light-black);
    padding: 3px 7px;
    font-size: 0.70rem;
    border-radius: 7px;
}

ul.selectable-tags li:hover {
    cursor: pointer;
    background: var(--light-black);
    color: var(--dirty-red);
}

/* loader */
.loader {
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute; 
    top: 0; 
    width: 100vw; 
    height: 100vh;
    background: black;
}

.loader .loader-design {
    width: 48px;
    height: 48px;
    border: 5px solid #FFF;
    border-bottom-color: transparent;
    border-radius: 50%;
    display: inline-block;
    box-sizing: border-box;
    animation: rotation 1s linear infinite;
}

@keyframes rotation {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
} 

